# rustyaci

./: Cargo.toml  LICENSE.md  README.md  justfile
.github/workflows/: check.yml  safety.yml  test.yml
src/: lib.rs  macros.rs
src/structs/: structs.rs
tests/json/: aaaLogin.json  fvTenant.json  mo.json
tests/json/post/: configExportP.json  epg-TEST.json
