[package]
name = "rustyaci"
version = "0.1.0"
edition = "2021"
rust = "1.67.0"

license = "MIT"
keywords = ["cisco", "aci", "api"]
description = "RustyACI is a robust and streamlined Cisco ACI API wrapper. Simplify your interactions with Cisco ACI through this efficient and developer-friendly tool, enabling rapid development and enhanced control over your network infrastructure in the Rust programming language."
categories = ["api-bindings"]
homepage = "https://github.com/richardstrnad/rustyaci"
readme = "README.md"
repository = "https://github.com/richardstrnad/rustyaci"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
dotenvy = "0.15.7"
futures = "0.3.29"
reqwest = { version = "0.11.25", features = ["cookies", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }

# for -Zminimal-versions
openssl = "0.10.38" # Ubuntu build issue
http = "0.2"
trait-variant = "0.1.1"
